# Hermes-Backup

./: .gitignore  MANIFEST.json  MANIFEST.md  README.md
cli/skill-clis/flights/: README.md  pyproject.toml
cli/skill-clis/flights/aeroflot_research/: agent__js_addons_pickadate_ru_RU.js  agent__js_popper.min.js  agent_main_js.txt  agent_page.html  agent_style_css.txt  biletix_wl_main.js
cli/skill-clis/flights/docs/: fli-kupibilet-provider-strategy.md
cli/skill-clis/flights/flights_cli/: __init__.py  __main__.py  cli.py  config.py  env.py  errors.py  io.py  output.py  store.py
cli/skill-clis/flights/flights_cli/commands/: basic.py  providers.py  route.py
cli/skill-clis/flights/flights_cli/contracts/: __init__.py  agent_report.v1.schema.json
cli/skill-clis/flights/flights_cli/domain/: airports.py  carriers.py  normalize.py  routes.py  stop_metrics.py  stop_policy.py
cli/skill-clis/flights/flights_cli/orchestrators/: kb_assemble.py  metrics.py  route_plan.py
cli/skill-clis/flights/flights_cli/providers/: fli_mcp.py  kupibilet.py  static_catalog.py  travelpayouts.py  travelpayouts_data.py  u6.py
cli/skill-clis/flights/flights_cli/services/: agent_report.py  agent_report_contract.py  assembly.py  ranking.py  (+2 more)
cli/skill-clis/flights/tests/: helpers.py  test_agent_report_contract.py  test_answer_lines_stop_policy.py  test_architecture.py  test_cli_contract.py  test_fli_mcp.py  test_kupibilet.py  test_offline.py  test_provider_aggregate_stop_policy.py  test_route_intel.py  test_route_workflows.py  test_stop_policy.py  test_travelpayouts_layers.py  test_u6.py
(+689 files in other folders)
